# burner

./: .yarnrc.yml  Anchor.toml  burner.ts  jest.config.ts  package.json  tsconfig.json
programs/burner/: Cargo.toml
programs/burner/src/: events.rs  lib.rs
programs/burner/src/instructions/: burn.rs  claim.rs  create_furnace.rs  mod.rs
programs/burner/src/state/: furnace.rs  mod.rs
test/: burn.test.ts  claim.test.ts  createFurnace.test.ts  holder.ts  provider.ts  utils.ts
