[package]
name = "burner"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "=0.24.2", features = ["init-if-needed", "derive"] }
anchor-spl = "=0.24.2"
bs58 = "0.4.0"
thiserror = "1.0.29"
uint = "0.9.3"
